<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    https://stackoverflow.com/questions/50574943/how-to-add-chips-from-material-components-library-to-input-field-in-android-->

    <LinearLayout
        android:id="@+id/ll_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_contacts"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            >

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fl_contacts"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:paddingTop="8dp"
                app:alignContent="space_around"
                app:alignItems="stretch"
                app:dividerDrawable="@drawable/divider"
                app:flexWrap="wrap"
                app:showDivider="beginning|middle|end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_contact"
                    android:layout_width="wrap_content"
                    android:maxWidth="5000dp"
                    android:layout_height="40dp"
                    android:paddingBottom="10dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:hint="@string/add_contact"
                    android:textAlignment="textStart"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    app:layout_flexGrow="1"
                    />

            </com.google.android.flexbox.FlexboxLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimaryDark"
                />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_time"
        app:layout_constraintTop_toBottomOf="@id/ll_contacts_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_event"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_time"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:padding="12dp"
                android:hint="Choose time"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimaryDark"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_treatment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_time"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_service"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_treatment"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:hint="Add service"
                android:padding="12dp"
                android:ellipsize="end"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimaryDark"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time_template"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_treatment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time_offset"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_timetemplate"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:hint="@string/choose_time_offset"
                android:padding="12dp"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimaryDark"
                />

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/ll_time_template"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_message"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_message"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:hint="@string/choose_message"
                android:ellipsize="end"
                android:padding="12dp"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/colorPrimaryDark"

                />

        </LinearLayout>


    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_autocomplete_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:elevation="1dp"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/ll_contacts_list"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>