...
        android:name="com.oscarcreator.pigeon.addeditscheduledtreatment.AddEditScheduledTreatmentFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_addedit_scheduled_treatment"
        >
        <action
            android:id="@+id/action_addEditTreatmentFragment_to_messageListFragment"
            app:destination="@id/messageListFragment" />
        <action
            android:id="@+id/action_addEditTreatmentFragment_to_timeTemplateListFragment"
            app:destination="@id/timeTemplateListFragment" />
        <argument
            android:name="scheduledTreatmentId"
            app:argType="long"
...
        android:id="@+id/messageListFragment"
        android:name="com.oscarcreator.pigeon.messages.MessagesFragment"
        android:label="@string/messages"
        tools:layout="@layout/fragment_messages" >
        <action
            android:id="@+id/action_messageListFragment_to_messageDetailFragment"
            app:destination="@id/messageDetailFragment" />
        <action
            android:id="@+id/action_messageListFragment_to_addEditMessageFragment"
            app:destination="@id/addEditMessageFragment" />
    </fragment>
    <fragment
        android:id="@+id/addEditMessageFragment"
...
