<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/delete"
        android:title="Delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="always"
        />

</menu>